@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model Excerpt - US24

class "Product Owner" as ProductOwner {
}

class "Political Agent" as PoliticalAgent {
    nationalIdentityCard
    taxIdentificationNumber
    mandateStart
    mandateEnd
}

class "Declaration of Interests" as Declaration {
    name
    submissionDate
}

enum DeclarationType {
    INITIAL
    REGULAR
    EXCEPTIONAL
}

enum DeclarationStatus {
    PENDING
    VALIDATED
    REJECTED
}

class PositionEntry {
    nature
    grossSalary
    sideIncomeConsulting
    sideIncomeBoardMemberships
    startDate
    endDate
}

class Function {
    designation
}

class Organization {
    name
    nature
}

class AssetEntry {
    assetValue
}

enum AssetType {
    REAL_ESTATE
    VEHICLES
    STOCKS
}

ProductOwner "1" -- "*" Declaration : exports (CSV) >
PoliticalAgent "1" -- "*" Declaration : submits / has >
Declaration "*" -- "1" DeclarationType : classified as >
Declaration "*" -- "1" DeclarationStatus : has >
Declaration "1" *-- "*" PositionEntry : includes >
Declaration "1" *-- "*" AssetEntry : includes >
PositionEntry "*" -- "1" Organization : held at >
PositionEntry "*" -- "1" Function : performs >
AssetEntry "*" -- "1" AssetType : classified as >

@enduml
